# ClickNote

./: .firebaserc  .gitignore  build.gradle  build.gradle.kts  download_cmdline_tools.ps1  firebase.json  gradle.properties  settings.gradle  settings.gradle.kts  update_sdk.ps1
app/: build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro
app/schemas/com.example.clicknote.data.AppDatabase/: 1.json  2.json  3.json  4.json
app/schemas/com.example.clicknote.data.ClickNoteDatabase/: 1.json  2.json
app/schemas/com.example.clicknote.data.db.ClickNoteDatabase/: 1.json  4.json  5.json
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/res/drawable/: ic_backup_complete.xml  ic_backup_error.xml  ic_cleanup_complete.xml  ic_cleanup_error.xml  ic_clicknote_logo.xml  ic_copy.xml  ic_launcher_foreground.xml  ic_mic.xml  ic_mic_off.xml  ic_note.xml  ic_notification.xml  ic_restore_complete.xml  ic_restore_error.xml  ic_share.xml  ic_storage.xml  ic_transcribe.xml  ic_transcribing.xml  ic_upgrade.xml  onboarding_ai.xml  onboarding_organize.xml  onboarding_welcome.xml  (+3 more)
dataconnect/: dataconnect.yaml
functions/: .eslintrc.js  package-lock.json  package.json  tsconfig.dev.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts  subscriptions.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: cleanup_cmdline_tools.ps1  download_whisper_model.ps1  update_cmdline_tools.ps1
(+948 files in other folders)
